(executable
 (name main)
 (public_name plaintext-server)
 (flags (:standard -safe-string -w A-44-33-4 -open Containers))
 (libraries containers cohttp-lwt-unix cmdliner))

(rule
  (with-stdout-to config.ml
    (progn
      (echo "let name = {|plaintext-server|}\n")
      (echo "let version = {|${version:plaintext-server}|}\n"))))
